--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,17 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        arch: [win-x64, win-arm, win-arm64, osx-x64, linux-x64, linux-arm]
+        arch:
+          [
+            win-x64,
+            win-arm64,
+            osx-x64,
+            osx-arm64,
+            linux-x64,
+            linux-arm,
+            linux-arm64,
+            generic,
+          ]
 
     runs-on: windows-latest
 
@@ -34,12 +44,12 @@ jobs:
         run: dotnet restore ${{ env.PROJECT_NAME }} -p:ContinuousIntegrationBuild=true --nologo
 
       - name: Publish ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
-        run: dotnet publish ${{ env.PROJECT_NAME }} --runtime ${{ matrix.arch }} -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true --self-contained true -c Release -o ./tmp/${{ env.PROJECT_NAME }}
+        if: ${{ !contains( matrix.arch , 'generic' ) }}
+        run: dotnet publish ${{ env.PROJECT_NAME }} -r ${{ matrix.arch }} -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=true --self-contained true -c Release -o ./tmp/${{ env.PROJECT_NAME }}
 
-      - name: Remove useless files
-        run: |
-          Remove-Item *.pdb
-          Remove-Item appsettings.Development.json
+      - name: Publish ${{ env.PROJECT_NAME }} ${{ matrix.arch }}
+        if: ${{ contains( matrix.arch , 'generic' ) }}
+        run: dotnet publish ${{ env.PROJECT_NAME }} -r ${{ matrix.arch }} -p:PublishSingleFile=true -p:IncludeNativeLibrariesForSelfExtract=true -p:PublishTrimmed=true -c Release -o ./tmp/${{ env.PROJECT_NAME }}
 
       - name: Zip files
         run: 7z a -bd -slp -tzip -mm=Deflate -mx=5 -mfb=150 -mpass=10 "./dist/${{ matrix.arch }}.zip" "./tmp/${{ env.PROJECT_NAME }}/*"
@@ -65,12 +75,6 @@ jobs:
           name: win-x64
           path: out
 
-      - name: Download win-arm artifact
-        uses: actions/download-artifact@v3.0.0
-        with:
-          name: win-arm
-          path: out
-
       - name: Download win-arm64 artifact
         uses: actions/download-artifact@v3.0.0
         with:
@@ -83,6 +87,12 @@ jobs:
           name: osx-x64
           path: out
 
+      - name: Download osx-arm64 artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: osx-arm64
+          path: out
+
       - name: Download linux-x64 artifact
         uses: actions/download-artifact@v3.0.0
         with:
@@ -93,6 +103,18 @@ jobs:
         uses: actions/download-artifact@v3.0.0
         with:
           name: linux-arm
+          path: out
+
+      - name: Download linux-arm64 artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: linux-arm64
+          path: out
+
+      - name: Download generic artifact
+        uses: actions/download-artifact@v3.0.0
+        with:
+          name: generic
           path: out
 
       - name: Create ${{ env.PROJECT_NAME }} GitHub release
@@ -116,16 +138,6 @@ jobs:
           asset_name: ${{ env.PROJECT_NAME }}-win-x64.zip
           asset_content_type: application/zip
 
-      - name: Upload win-arm to GitHub release
-        uses: actions/upload-release-asset@v1.0.2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.github_release.outputs.upload_url }}
-          asset_path: out/win-arm.zip
-          asset_name: ${{ env.PROJECT_NAME }}-win-arm.zip
-          asset_content_type: application/zip
-
       - name: Upload win-arm64 to GitHub release
         uses: actions/upload-release-asset@v1.0.2
         env:
@@ -146,6 +158,16 @@ jobs:
           asset_name: ${{ env.PROJECT_NAME }}-osx-x64.zip
           asset_content_type: application/zip
 
+      - name: Upload osx-arm64 to GitHub release
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/osx-arm64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-osx-arm64.zip
+          asset_content_type: application/zip
+
       - name: Upload linux-x64 to GitHub release
         uses: actions/upload-release-asset@v1.0.2
         env:
@@ -164,4 +186,24 @@ jobs:
           upload_url: ${{ steps.github_release.outputs.upload_url }}
           asset_path: out/linux-arm.zip
           asset_name: ${{ env.PROJECT_NAME }}-linux-arm.zip
+          asset_content_type: application/zip
+
+      - name: Upload linux-arm64 to GitHub release
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/linux-arm64.zip
+          asset_name: ${{ env.PROJECT_NAME }}-linux-arm64.zip
+          asset_content_type: application/zip
+      
+      - name: Upload generic to GitHub release
+        uses: actions/upload-release-asset@v1.0.2
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.github_release.outputs.upload_url }}
+          asset_path: out/generic.zip
+          asset_name: ${{ env.PROJECT_NAME }}-generic.zip
           asset_content_type: application/zip
